--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     scroll-padding-top: 300px;
+    max-width: 99.1vw !important;
   }
 
 
@@ -65,7 +66,7 @@ body {
 .main {
     margin: auto;
     width: 80vw;
-    height: 80vh;
+    height: 100vh;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     align-items: center;
@@ -84,8 +85,12 @@ body {
     color: #242c55;
   }
 
-  .download-cv {
-    margin-right: 10%;
+  .contenido p{
+    text-align: center;
+  }
+
+  .boton {
+    margin-right: 0%;
     padding: 10px 20px;
     background-color: #6a4174;
     border: none;
@@ -97,7 +102,7 @@ body {
     box-shadow: 1px 3px 11px -5px #242c55;
   }
   
-  .download-cv:hover {
+  .boton:hover {
     background-color: #242c55;
     box-shadow: none;
   }
@@ -107,4 +112,83 @@ body {
     width: 300px;
     height: 520px;
     z-index: 1;
+    border-radius: 20%/10%;
   }
+
+  /* QUIEN SOY */
+  .aboutme {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    width: 100vw;
+    align-items: center;
+    background-color: #6a4174;
+  }
+
+  .about img {
+    width: 100%;
+    grid-column: 1/5;
+  }
+
+  .about-info {
+    grid-column: 5/10;
+    padding: 3em;
+    background-color: #e2ddf6;
+  }
+
+  .about-info h2 {
+    font-size: 2em;
+    color: #191c32;
+  }
+
+  .divVacio {
+    height: 4px;
+    width: 60px;
+    margin-top: 5px;
+    margin-bottom: 2em;
+  }
+
+  .about p {
+    margin-bottom: 1em;
+  }
+
+    /* PORTAFOLIO*/
+
+  .portfolio,
+  .contact-section {
+  width: 100vw;
+  color: #191c32;
+}
+
+.portfolio-heading {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.portfolio-heading h2,
+.contact-heading h2 {
+  font-size: 2.5em;
+}
+
+.portfolio .container {
+  width: 80vw;
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  width: 300px;
+  background-color: #6a4174;
+  margin: 1em;
+}
+
+.card__img {
+  width: 100%;
+  height: 150px;
+  background-image: url(https://res.cloudinary.com/freelancer2222222222222222/image/upload/v1650543491/samples/2-original_agisst.png);
+  background-size: cover;
+}
