--- a/estilos.css
+++ b/estilos.css
@@ -190,13 +190,8 @@
 
 .portfolio-heading {
   text-align: center;
-  margin-top: 1%;
-  margin-bottom: 1%;
-}
-
-.portfolio-heading h2,
-.contact-heading h2 {
-  font-size: 2em;
+  font-size: xx-large;
+  margin-top: 5%;
 }
 
   .container {
@@ -217,12 +212,16 @@
   padding-right: 2%;
 }
 
+.card:hover {
+  background-color: gold;
+}
 
 #cardImg1 {
   background-image: url(fotos/html5.png);
   background-size: cover;
   width: 100%;
   height: 30%;
+
 }
 
 #card1 {
@@ -270,12 +269,65 @@
   justify-content: space-evenly;
   color: #fff;
   font-size: 2.5em;
+  
 }
 
-
+.card a:hover {
+  color: black;
+}
 
 .container-contact {
   margin: 0 auto;
   display: flex;
   align-items: center;
+}
+
+    /* Contactar*/
+
+.contact {
+  padding: 3em;
+}
+
+.contenedor {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.contact img {
+  width: 750px;
+  height: 700px;
+  bottom: 0px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  margin-top: 2em;
+}
+.form-group textarea {
+  height: 150px;
+  padding: 1.5em;
+  background: none;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+.form-group .input {
+  padding: 10px 20px;
+  margin-bottom: 1em;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #fff;
+  color: #fff;
+}
+
+.form-group .btn-submit {
+  padding: 10px 20px;
+  margin: 1em;
+  border-radius: 20px;
+  border: none;
+  text-transform: uppercase;
+  background-color: #20223d;
 }
