--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@
 
   body {
     font-family: 'Montserrat', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: url(fotos/fondo2.png);
+    background-image: url(../fotos/fondo2.png);
     background-repeat: no-repeat;
     background-size: cover;
     overflow-x: hidden;
@@ -130,9 +130,9 @@
   }
 
   .main img {
-    border:  7px solid #5E306F;
-    width: 300px;
-    height: 520px;
+    margin-left: 20%;
+    width: 50%;
+    height: 75%;
     z-index: 1;
     border-radius: 20%/10%;
   }
@@ -220,7 +220,7 @@
 }
 
 #cardImg1 {
-  background-image: url(fotos/html5.png);
+  background-image: url(../fotos/html5.png);
   background-size: cover;
   width: 100%;
   height: 30%;
@@ -233,7 +233,7 @@
 }
 
 #cardImg2 {
-  background-image: url(fotos/css3.png);
+  background-image: url(../fotos/css3.png);
   background-size: cover;
   width: 100%;
   height: 30%;
@@ -246,7 +246,7 @@
 }
 
 #cardImg3 {
-  background-image: url(fotos/java.png);
+  background-image: url(../fotos/java.png);
   background-size: cover;
   width: 100%;
   height: 35%;
@@ -272,7 +272,8 @@
   justify-content: space-evenly;
   color: #fff;
   font-size: 2.5em;
-  
+  margin-right: 50%;
+  margin-left: 50%;
 }
 
 .card a:hover {
@@ -403,4 +404,6 @@ h4 span {
   
   .sotial-networks i {
     font-size: 1.5em;
-  }
+  } 
+
+
