--- a/css/intro.css
+++ b/css/intro.css
@@ -4,23 +4,42 @@
     left: 0;
     width:100%;
     height:100%;
-    background: white;
+    background: #5E306F;
     text-align: center;
+    padding-top: 5%;
     z-index: 200;
     overflow: hidden;
-    line-height: 90vh;
+}
+
+
+
+  @keyframes fondo {
+    0%{
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 
   @keyframes fadeOn {
-    to {
+    0%{
+      opacity: 0;
+    }
+    50% {
         opacity: 1;
+    }
+    100% {
+      opacity: 0;
     }
   }
 
   .fade {
-    color: black;
+    font-size: 3em;
+    color: white;
+    text-shadow: 0.1em 0.1em 0.05em black !important;
     opacity: 0;
-    animation: fadeOn 1s ease-in forwards;
+    animation: fadeOn 4s ease-in forwards;
   }
 
   .bienvenido.display-none {
@@ -29,13 +48,19 @@
     left: 0;
     width:100%;
     height:100%;
-    background: white;
+    background: #5E306F;
     text-align: center;
     z-index: -10;
-    overflow: hidden;
+    overflow: hidden !important;
     line-height: 90vh;
     opacity: 0;
+    animation: fondo 2s ease-in forwards;
   }
 
+.emogy1 {
+  margin-bottom: 10%;
+}
 
-
+.emogy2 {
+  margin-top: 10%;
+}
