--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-
+border:red solid 2px;
   }
   
   /* BODY */
@@ -15,15 +15,25 @@
     background-size: cover;
 }
 
+
+
 body::-webkit-scrollbar{
   display: none;
 }
 
+.container {
+  overflow-x:hidden
+}
+
 .flotante {
-  display:scroll;
+  display: scroll;
       position:fixed;
       bottom:10%;
-      right:-20%;
+      right: -95%;
+      
+}
+.flecha-scroll {
+  width: fit-content;
 }
 
 .flotante2 {
@@ -92,24 +102,32 @@ body::-webkit-scrollbar{
   /* MAIN */
 
 .main {
-    margin: auto;
-    width: 80vw;
+    
+    width: 100%;
     height: 90vh;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+    display: flex;
+    
+    justify-content: space-around;
     align-items: center;
-    gap: 2em;
     background-color: transparent;
-    text-align: center;
+    
   }
 
   h1 {
     font-size: 3em;
     color: white;
-    margin-bottom: 2%;
+    
+  }
+  .contenido {
+    flex-basis: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
   }
  
   .contenido span {
+    
     color: #5E306F;
     text-shadow: 0.1em 0.1em 0.05em white !important;
   }
@@ -123,12 +141,12 @@ body::-webkit-scrollbar{
   }
 
   .boton {
-    margin-right: 0%;
+    
     padding: 10px 20px;
     background-color: transparent;
     border: #5E306F solid;
     border-radius: 20px;
-    margin-top: 10px;
+    
     cursor: pointer;
     -webkit-box-shadow: 1px 3px 11px -5px #ad66e7b0;
     -moz-box-shadow: 1px 3px 11px -5px #242c55;
@@ -142,10 +160,9 @@ body::-webkit-scrollbar{
   }
 
   .main img {
-    margin-left: 20%;
-    width: 50%;
-    height: 75%;
-    z-index: 1;
+    flex-basis: 40%;
+    height: 100%;
+    object-fit:contain;
     border-radius: 20%/10%;
   }
 
