--- a/css/estilos.css
+++ b/css/estilos.css
@@ -435,10 +435,10 @@ h4 span {
   
 }
 
-@keyframes escribir {
+/* @keyframes escribir {
   from { width: 20.5% }
   to { width: 50; }
-}
+} */
 
 .form-group {
   display: flex;
