--- a/css/movil.css
+++ b/css/movil.css
@@ -2,6 +2,10 @@
   
   /* Navegador */
 
+
+  .navegacion {
+    width: 100vw;
+  }
   .menu {
     display: none;
     position: absolute;
@@ -98,7 +102,7 @@
 
   .aboutme {
     height: 50vh;
-    width: 110vw;
+    width: 100vw;
     
   }
   
@@ -108,11 +112,13 @@
   }
 
   .about-info {
-    height: 50vh;
-    width: 50vh;
-    margin: 0;
-    margin-left: -2%;
-    padding-left: 1rem;
+    height: 40vh;
+    width: 90vw;
+    padding: 0%;
+    margin-top: 3%;
+    margin-right: 0%;
+    margin-left: -2.9%;
+    margin-bottom: 3%;
   }
 
   .aboutme p {
@@ -128,6 +134,7 @@
     margin-top: 2rem;
   }
 
+
   .portfolio {
     height: 55vh;
   }
@@ -136,6 +143,10 @@
 
 
   swiper-container{
+    display: block;
+  }
+
+  .container-movil {
     display: block;
   }
   swiper-container {
@@ -170,3 +181,38 @@
     display: none;
   }
 }
+
+
+.contact {
+
+  background-color: #5E306F;
+  height: 50vh;
+}
+
+.contenedor {
+  height: 100%;
+}
+
+.contenedor img{
+  display: none;
+}
+
+.contact-form {
+  background-color: #e2ddf6;
+  padding: 0%;
+  margin-top: 3%;
+  margin-right: 0%;
+  margin-left: 5%;
+  margin-bottom: 3%;
+  display: flex;
+  flex-direction: column;
+  }
+
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+    justify-content: center;
+    margin-top: 2em;
+    margin-left: 3%;
+  }
